--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,14 +5,11 @@ body {
 }
 
 .daniela-paz {
-    margin-top: 5px;
-    margin-left: 22px;
-    width: 92.97%;
-    height: 26%/* 22.77% */;
     z-index: 1;
 }
 
 .picture-container{
+
 /*     max-width: 35%;
     max-height: 40%; */
 
@@ -20,20 +17,21 @@ body {
 
 .picture1 {
     z-index: -1;
+    width: auto;
+    padding: 0 15px;
 /*     margin-top: 25px;
     margin-left: 150px; */
 }
 
 .coming-soon-position {
     font-family: 'object Sans';
-    font-size: 20px;
+    font-size: 23px;
     color: black;
 }
 
 .fotografa-position {
     font-family: 'object Sans';
-    font-size: 25px;
-    overflow: hidden;       
+    font-size: 23px;   
     color:black;
 }
 
@@ -50,9 +48,7 @@ body {
 .phone-number-position{
     font-family: 'Object Sans';
     font-style: normal;
-    font-weight: 400;
     font-size: 20px;
-    line-height: 20px;
     color: black;
 /*     margin-top: 665px;
     margin-left: 280px;
@@ -63,15 +59,19 @@ body {
 .ig-position {
     font-family: 'Object Sans';
     font-style: normal;
-    font-weight: 400;
     font-size: 20px;
-    line-height: 20px;
     color:black;
 /*     margin-top: 658px;
     margin-left: 1350px;
     width: 5%;
     height: 0%; */
 }
+
+/* footer {
+    bottom: 0;
+    width: 100%;
+    height: 25px;
+  } */
 
 /* .body-about {
     position: relative;
